# winx

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.c  winx.c  winx.h
.github/workflows/: cmake.yml
example/: CMakeLists.txt  main.c  render.h
example/glad/: glad.c
util/: check-keys.py
wxgl/: README.md  generate.py
wxgl/template/: wxgl.c  wxgl.h
